--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "mp",
+  "name": "mp2copy",
   "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.0",
-    "mongodb": "^3.5.5",
-    "mongoose": "^5.9.6",
-    "validator": "^13.0.0"
-  },
-  "devDependencies": {},
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.2",
+    "express-session": "^1.17.0",
+    "handlebars": "^4.7.6",
+    "mongod": "^2.0.0",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {},
   "description": ""
 }
