--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +13,11 @@
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.2",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "mongod": "^2.0.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
