--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "debug": "nodemon -r dotenv/config server.js",
+    "dev": "node -r dotenv/config server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +22,25 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   },
+  "engines": {
+    "node": "12.x"
+  },
+  "dependencies": {
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.0",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
+    "handlebars": "^4.7.3",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.6"
+  },
   "devDependencies": {
+    "dotenv": "^9.0.2",
     "handlebars": "^4.5.3"
   },
   "repository": {
