--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^6.11.1",
+    "handlebars": "^4.7.7",
     "moment": "^2.29.1",
     "mongod": "^2.0.0",
     "mongodb": "^3.5.5",
